Update login message in index.html

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <div class="container">
         <div class="header">
             <h1>ระบบล็อกอินสำหรับเนื้อหาที่ปกป้อง</h1>
-            <p>กรุณาล็อกอินเพื่อดูข้อมูลใน Google Sheets</p>
+            <p>กรุณาล็อกอินเพื่อจัดการเว็บไซต์</p>
         </div>
         
         <div class="content">
