--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 
                 <div class="button-group">
                     <a href="https://docs.google.com/spreadsheets/d/19zx_MmojlWWXSHN31CDZMA5bs_0JCkhUvUSgN9iTr8c/edit?gid=1876705905#gid=1876705905" target="_blank" class="btn btn-newtab" id="newTabBtn">
-                        เปิดในแท็บใหม่
+                        แสดงตัวอย่างเว็บไซต์
                     </a>
                     <button class="btn btn-logout" id="logoutBtn">ออกจากระบบ</button>
                 </div>
@@ -332,7 +332,7 @@
         </div>
         
         <div class="footer">
-            <p>ระบบล็อกอินสำหรับปกป้องเนื้อหา &copy; 2023 | ออกแบบด้วย HTML, CSS และ JavaScript</p>
+            <p>ระบบจัดการระบบเว็บไซต์สำเร็จรูป &copy; 2025 | ครบเครื่องเรื่องไอที</p>
         </div>
     </div>
 
