Update paragraph text in header section

--- a/demoweb.html
+++ b/demoweb.html
@@ -273,7 +273,7 @@
     <!-- Header Section -->
     <div class="header">
         <h1>Demo ระบบเว็บไซต์สำเร็จรูป</h1>
-        <p>ระบบจัดการเนื้อหา Google Apps Script | แสดงผลเต็มหน้าจอโดยไม่ต้องเลื่อน | การทำงานแบบเรียลไทม์</p>
+        <p>ครบเครื่องเรื่องไอที</p>
     </div>
     
     <!-- Loading Overlay -->
