Update heading text in protected section

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             
             <!-- ส่วนเนื้อหาหลังล็อกอิน -->
             <div class="protected-section" id="protectedSection">
-                <h2 style="color: #2c3e50; margin-bottom: 20px;">ข้อมูล Google Sheets ที่ปกป้อง</h2>
+                <h2 style="color: #2c3e50; margin-bottom: 20px;">จัดการเนื้อหาเว็บไซต์ของท่าน</h2>
                 <p style="color: #555; margin-bottom: 25px;">คุณได้เข้าสู่ระบบเรียบร้อยแล้ว สามารถดูข้อมูลด้านล่างนี้ได้</p>
                 
                 <div class="iframe-container">
