--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 
                 <div class="button-group">
                     <a href="https://allaboutitappscript.github.io/democmsweb/demoweb.html" target="_blank" class="btn btn-newtab" id="newTabBtn">
-                        แสดงตัวอย่างเว็บไซต์
+                        ดูหน้าตัวอย่างเว็บไซต์
                     </a>
                     <button class="btn btn-logout" id="logoutBtn">ออกจากระบบ</button>
                 </div>
